<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/holo_blue_light"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/background_light"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/image_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@color/colorPrimary"
        tools:layout_width="match_parent"
        tools:layout_height="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_title_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title_phone"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="20sp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@android:color/holo_blue_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    tools:text="Number" />

                <TextView
                    android:id="@+id/text_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_weight="1"
                    android:text="@string/text_mobile" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="20sp"
            android:text="@string/text_title_email"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:textSize="20sp"
            tools:text="Email" />

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:text="@string/text_home" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_title_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="20sp"
            android:text="@string/text_title_website"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:background="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/text_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:textSize="20sp"
            tools:text="Website" />

    </LinearLayout>


</LinearLayout>